--- a/style.scss
+++ b/style.scss
@@ -164,9 +164,9 @@ img {
 }
 
 .site-avatar {
-  float: left;
-  width: 70px;
-  height: 70px;
+  float: center;
+  width: 150px;
+  height: 150px;
   margin-right: 15px;
 
   @include mobile {
@@ -192,11 +192,12 @@ img {
 
 .site-name {
   margin: 0;
+  text-align: center;
   color: $black;
   cursor: pointer;
   font-family: $myFont;
   font-weight: 300;
-  font-size: 28px;
+  font-size: 40px;
   letter-spacing: 1px;
 }
 
