--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -19,7 +19,7 @@ $myGreen: #cce3c3;
 $helvetica: Helvetica, Arial, sans-serif;
 $helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $georgia: Georgia, serif;
-$myFont: "Lucida Console", "Courier New", monospace;
+$myFont: "Monaco", "Lucida Console", monospace;
 
 // Mobile breakpoints
 @mixin mobile {
