--- a/style.scss
+++ b/style.scss
@@ -19,7 +19,7 @@ html {
 
 body {
 	background: $myGreen;
-  font: 18px/1.4 $myFont;
+  font: 18px/1.4 $georgia;
   color: $darkGray;
 }
 
@@ -31,7 +31,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: $myFont;
+  font-family: $georgia;
   color: $darkerGray;
   font-weight: bold;
 
@@ -69,11 +69,11 @@ p {
 }
 
 a {
-  color: $white;
+  color: $black;
   text-decoration: none;
 	cursor: pointer;
   &:hover, &:active {
-    color: $white;
+    color: $black;
   }
 }
 
@@ -163,10 +163,42 @@ img {
   }
 }
 
+.site-info {
+  float: center;
+
+  @include mobile {
+    float: none;
+    display: block;
+    margin: 0 auto;
+  }
+}
+
+.site-name {
+  margin: 0;
+  float: center;
+  color: $black;
+  cursor: pointer;
+  font-family: $georgia;
+  font-weight: 300;
+  font-size: 40px;
+  letter-spacing: 1px;
+}
+
+.site-description {
+  margin: -5px 0 0 0;
+  float: center;
+  color: $darkGray;
+  font-size: 20px;
+
+  @include mobile {
+    margin: 3px 0;
+  }
+}
+
 .site-avatar {
   float: center;
-  width: 150px;
-  height: 150px;
+  width: 100px;
+  height: 100px;
   margin-right: 15px;
 
   @include mobile {
@@ -180,41 +212,10 @@ img {
   }
 }
 
-.site-info {
-  float: left;
-
-  @include mobile {
-    float: none;
-    display: block;
-    margin: 0 auto;
-  }
-}
-
-.site-name {
-  margin: 0;
-  text-align: center;
-  color: $black;
-  cursor: pointer;
-  font-family: $myFont;
-  font-weight: 300;
-  font-size: 40px;
-  letter-spacing: 1px;
-}
-
-.site-description {
-  margin: -5px 0 0 0;
-  color: $darkGray;
-  font-size: 16px;
-
-  @include mobile {
-    margin: 3px 0;
-  }
-}
-
 nav {
   float: right;
   margin-top: 23px; // @TODO: Vertically middle align
-  font-family: $myFont;
+  font-family: $georgia;
   font-size: 18px;
 
   @include mobile {
@@ -233,7 +234,7 @@ nav {
 
     @include mobile {
       margin: 0 10px;
-      color: $white;
+      color: $black;
     }
   }
 }
