--- a/style.scss
+++ b/style.scss
@@ -197,8 +197,9 @@ img {
 
 .site-avatar {
   float: center;
-  width: 100px;
-  height: 100px;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
   margin-right: 15px;
 
   @include mobile {
