--- a/style.scss
+++ b/style.scss
@@ -197,8 +197,8 @@ img {
 
 .site-avatar {
   float: center;
-  width: 80px;
-  height: 80px;
+  width: 70px;
+  height: 70px;
   border-radius: 50%;
   margin-right: 15px;
 
@@ -209,7 +209,7 @@ img {
   }
 
   img {
-    border-radius: 5px;
+    border-radius: 50%;
   }
 }
 
