--- a/style.scss
+++ b/style.scss
@@ -196,9 +196,9 @@ img {
 }
 
 .site-avatar {
-  float: left;
-  width: 80px;
-  height: 80px;
+  float: center;
+  width: 20px;
+  height: 20px;
   border-radius: 50%;
   margin-right: 15px;
 
