--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -9,11 +9,12 @@ $blue: #72bcd4;
 // Grays
 $black: #000;
 $darkerGray: #222;
-$darkGray: #333;
-$gray: #666;
+$darkGray: #999999;
+$gray: #d9d9d9;
 $lightGray: #eee;
 $white: #fff;
 $myGreen: #cce3c3;
+$myBlue: #009999;
 
 // Font stacks
 $helvetica: Helvetica, Arial, sans-serif;
